@@ -3,6 +3,8 @@ $Id$
 You are looking at a CVS snapshot of the REL_1_2 branch.
 
 Version 1.1.7 (?? ??? 2007)
+ - Change $includedir and $basedir to CONSTANTS
+ - Fix bug [ 1797030 ] Error in send_reminder.php
  - Fix bug [ 1737128 ] From notification to "not authorized"
  - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
  - Fix bug [ 1829125 ] I can not add external calendars
